--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Manuel Rodríguez Camacho</title>
+  <icon rel="icon" type="image/png" href="assets/images/favicon.png" />
 
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -19,8 +20,8 @@
 
     <div class="hero-links">
       <a href="https://github.com/mrodriguex" target="_blank">GitHub</a>
-      <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-      <a href="mailto:your@email.com">Contact</a>
+      <a href="https://www.linkedin.com/in/manuel-rodriguez-camacho/" target="_blank">LinkedIn</a>
+      <a href="mailto:manuel.r.camacho@outlook.com">Contact</a>
     </div>
   </div>
 </header>
