--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Manuel Rodríguez Camacho</title>
-  <icon rel="icon" type="image/png" href="assets/images/favicon.png" />
+  <link rel="icon" type="image/jpg" href="assets/images/favicon.jpg" />
 
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
