References to resume documents added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div class="hero-links">
       <a href="https://github.com/mrodriguex" target="_blank">GitHub</a>
       <a href="https://www.linkedin.com/in/manuel-rodriguez-camacho/" target="_blank">LinkedIn</a>
+      <a href="resume/concise/resume.pdf" target="_blank">Concise Resume</a>
+      <a href="resume/inextenso/resume.pdf" target="_blank">Full Resume</a>
       <a href="mailto:manuel.r.camacho@outlook.com">Contact</a>
     </div>
   </div>
