professional information added.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <nav class="navbar">
   <div class="nav-container">
     <a href="#about" class="nav-link">About</a>
+    <a href="#skills" class="nav-link">Skills</a>
+    <a href="#experience" class="nav-link">Experience</a>
     <a href="#projects" class="nav-link">Projects</a>
+    <a href="#education" class="nav-link">Education</a>
     <a href="#contact" class="nav-link">Contact</a>
   </div>
 </nav>
@@ -41,10 +44,75 @@
 <section class="section" id="about">
   <h2>About Me</h2>
   <p>
-    Software engineer with experience in backend systems, reverse proxies,
-    distributed architectures, and developer tooling. I build practical,
-    scalable solutions with a focus on clarity and control.
+    Software Development Engineer and Technical Leader with experience in full-stack development, microservices architecture, cloud-ready applications, and cross-functional team collaboration. Skilled in designing scalable systems, implementing best development practices, and guiding engineering teams toward efficient and timely delivery.
   </p>
+</section>
+
+<section class="section" id="skills">
+  <h2>Technical Skills</h2>
+  <div class="skills-grid">
+    <div class="skill-category">
+      <h3>Languages</h3>
+      <p>C#, C, JavaScript, CSS, PHP, Python, VHDL</p>
+    </div>
+    <div class="skill-category">
+      <h3>Frameworks</h3>
+      <p>.NET Core, MAUI, Razor Pages</p>
+    </div>
+    <div class="skill-category">
+      <h3>Architectures</h3>
+      <p>MVC, MVVM, Microservices, Legacy Layered Applications</p>
+    </div>
+    <div class="skill-category">
+      <h3>Tools</h3>
+      <p>Git, Azure DevOps, Docker, Ansible, KVM, WSL2, VPN, SCRUM</p>
+    </div>
+    <div class="skill-category">
+      <h3>Databases</h3>
+      <p>SQL Server, Azure SQL, MySQL</p>
+    </div>
+    <div class="skill-category">
+      <h3>Cloud</h3>
+      <p>Azure (App Services, SQL, Pipelines), AWS</p>
+    </div>
+  </div>
+</section>
+
+<section class="section" id="experience">
+  <h2>Professional Experience</h2>
+  <div class="experience-item">
+    <h3>Software Developer / Technical Leader</h3>
+    <p class="experience-company">Cryoinfra — 2019 to 2025</p>
+    <ul>
+      <li>Led multidisciplinary SCRUM-based teams, ensuring timely delivery of high-impact software solutions.</li>
+      <li>Designed, implemented, and maintained a microservices-based architecture secured with JWT authentication.</li>
+      <li>Developed scalable web and mobile applications using Razor Pages, .NET Core, and .NET MAUI.</li>
+      <li>Integrated and orchestrated multiple internal and external APIs for data synchronization across systems.</li>
+      <li>Defined technical documentation standards, including architecture diagrams, workflows, and coding guidelines.</li>
+      <li>Mentored junior developers, conducted code reviews, and promoted best practices in software development.</li>
+    </ul>
+  </div>
+  <div class="experience-item">
+    <h3>Laboratory Academic</h3>
+    <p class="experience-company">Universidad Autónoma Metropolitana - Azcapotzalco — 2014 to 2017</p>
+    <ul>
+      <li>Developed and maintained departmental web site and applications using PHP, JavaScript, and MySQL.</li>
+      <li>Administered Linux and Windows servers, as well as departmental network infrastructure.</li>
+      <li>Maintained and supported Systems Department classrooms and laboratories.</li>
+      <li>Contributed to teaching and research activities by assisting faculty and supporting academic projects.</li>
+    </ul>
+  </div>
+  <div class="experience-item">
+    <h3>Junior Software Developer</h3>
+    <p class="experience-company">Cryoinfra — 2012 to 2014</p>
+    <ul>
+      <li>Developed monolithic web and desktop applications using .NET Framework and SQL Server.</li>
+      <li>Collaborated closely with QA and product teams to ensure high-quality deliverables.</li>
+      <li>Diagnosed and resolved complex issues in third-party components (e.g., Telerik).</li>
+      <li>Optimized database queries, improving application performance and reliability.</li>
+      <li>Provided help desk and technical support for internal users.</li>
+    </ul>
+  </div>
 </section>
 
 <section class="section" id="projects">
@@ -55,8 +123,7 @@
     <div class="project-info">
       <h3>HookHubNet</h3>
       <p>
-        Dynamic reverse proxy system built with YARP and .NET.
-        Routes traffic based on subdomains and runtime backend discovery.
+        HookHubNet is a tunneling system that enables secure forwarding of TCP traffic through WebSocket connections. It consists of a central hub that manages connections from multiple hooks, each forwarding traffic to backend services.
       </p>
 
       <ul class="tags">
@@ -264,6 +331,16 @@
     </div>
   </article>
 
+</section>
+
+<section class="section" id="education">
+  <h2>Education</h2>
+  <ul class="education-list">
+    <li><strong>Master of Computer Science</strong> — Centro de Investigación y Estudios Avanzados (CINVESTAV) (2016 to 2018)</li>
+    <li><strong>Computer Engineering</strong> — Universidad Autónoma Metropolitana Azcapotzalco (UAM-A) (2009 to 2014)</li>
+    <li><strong>Computer Technician</strong> — Centro de Estudios Computacionales del Valle de México (CECOVAM) (2006 to 2008)</li>
+    <li><strong>Automated Machines Technician</strong> — Centro de Estudios Científicos y Tecnológicos (CECyT 9) (2005 to 2008)</li>
+  </ul>
 </section>
 
 <section class="section" id="contact">
