--- a/index.html
+++ b/index.html
@@ -360,5 +360,8 @@
 </footer>
 
 <script src="assets/js/main.js"></script>
+
+<button id="back-to-top" title="Back to Top" style="position: fixed; bottom: 20px; right: 20px; display: none; background: #17a2b8; color: white; border: none; border-radius: 50%; width: 50px; height: 50px; font-size: 20px; cursor: pointer; box-shadow: 0 4px 8px rgba(0,0,0,0.3); z-index: 1000;">↑</button>
+
 </body>
 </html>
